--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="google_map_v2_api_key">AIzaSyDFrQEbN0Q_hbnmJ4GcQjaU3eEk5lCR8pI</string>
 </resources>
